--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-calendar": "^6.0.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.3",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.0.2",
     "swiper": "^11.2.10",
     "tailwindcss": "^4.1.11"
